--- a/p4-evaluate-a-news-article-with-nlp/package.json
+++ b/p4-evaluate-a-news-article-with-nlp/package.json
@@ -20,9 +20,18 @@
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
+    "aylien_textapi": "^0.7.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "dotenv": "^8.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "webpack-dev-server": "^3.7.2"
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack-dev-server": "^3.9.0"
   }
 }
+
