--- a/p4-evaluate-a-news-article-with-nlp/package.json
+++ b/p4-evaluate-a-news-article-with-nlp/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -31,6 +32,7 @@
     "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
