--- a/p4-evaluate-a-news-article-with-nlp/package.json
+++ b/p4-evaluate-a-news-article-with-nlp/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/runtime": "^7.10.2",
     "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.9.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.5.4",
     "aylien_textapi": "^0.7.0",
     "babel-loader": "^8.0.6",
