--- a/p7-FEND-Capstone-Travel-app/.env
+++ b/p7-FEND-Capstone-Travel-app/.env
@@ -1,2 +1,6 @@
-API_ID=96f6b583
-API_KEY=bf2af80160e2af7015461852d8fe97e9
+
+pixabay_key=16912025-2badedd82e75bb1b12192e65c
+
+weatherbit.io
+username=manpreetsingh
+key= b3432a956d7b45a18ba374d67c837a2e
