--- a/p7-FEND-Capstone-Travel-app/package.json
+++ b/p7-FEND-Capstone-Travel-app/package.json
@@ -20,9 +20,12 @@
     "cors": "^2.8.5",
     "dark-sky": "^1.1.5",
     "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "ms-convert": "^1.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "request": "^2.88.0",
     "supertest": "^4.0.2",
+    "terser-webpack-plugin": "^3.0.3",
     "valid-url": "^1.0.9",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10"
