--- a/p7-FEND-Capstone-Travel-app/.babelrc
+++ b/p7-FEND-Capstone-Travel-app/.babelrc
@@ -1,7 +1,13 @@
 {
-    "presets": ["@babel/preset-env"],
-  
-    "plugins": ["@babel/plugin-transform-runtime"]
-     
-    
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "entry",
+         "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ]
 }
