--- a/p7-FEND-Capstone-Travel-app/package.json
+++ b/p7-FEND-Capstone-Travel-app/package.json
@@ -1,48 +1,54 @@
 {
-  "name": "p7-fend-capstone-travel-app",
+  "name": "travel-app",
   "version": "1.0.0",
-  "description": "api fetch app",
-  "main": "server.js",
+  "description": "A travel app that obtains a desired trip location & date from the user, and displays weather and an image of the location using information obtained from external APIs.",
+  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "npm run client-prod && npm run server-prod",
-    "server-dev": "nodemon src/server/index.js",
-    "server-prod": "node src/server/index.js",
-    "client-prod": "webpack --config webpack.prod.js",
-    "client-dev": "webpack-dev-server  --config webpack.dev.js --open"
+    "start": "node ./src/server/server.js",
+    "build": "webpack",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build-prod": "webpack --config webpack.prod.js"
   },
-  "author": "Manpreet Singh",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "aylien_textapi": "^0.7.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dark-sky": "^1.1.5",
-    "express": "^4.17.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "ms-convert": "^1.0.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "request": "^2.88.0",
-    "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^3.0.3",
-    "valid-url": "^1.0.9",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.10"
-  },
+  "author": "Manpreet",
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.2.0",
-    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-await": "^1.1.0",
+    "express-async-errors": "^3.1.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.13.1",
+    "jquery": "^3.4.1",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "webpack-dev-server": "^3.9.0",
+    "supertest": "^4.0.2",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
     "workbox-webpack-plugin": "^4.3.1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest"
+    }
   }
 }
