--- a/p7-FEND-Capstone-Travel-app/package.json
+++ b/p7-FEND-Capstone-Travel-app/package.json
@@ -12,7 +12,13 @@
   },
   "author": "Manpreet",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "^3.0.3",
+    "webpack-bundle-analyzer": "^3.8.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
