--- a/p7-FEND-Capstone-Travel-app/package.json
+++ b/p7-FEND-Capstone-Travel-app/package.json
@@ -13,6 +13,8 @@
   "author": "Manpreet",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/runtime": "^7.10.2",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
     "mini-css-extract-plugin": "^0.9.0",
